--- a/server/package.json
+++ b/server/package.json
@@ -11,6 +11,7 @@
     "@clerk/express": "^1.4.14",
     "bcryptjs": "^3.0.2",
     "cloudinary": "^2.6.0",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
