--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.12.2",
     "katex": "^0.16.22",
     "lucide-react": "^0.460.0",
     "react": "^18.2.0",
