--- a/client/package.json
+++ b/client/package.json
@@ -12,8 +12,10 @@
     "axios": "^1.12.2",
     "katex": "^0.16.22",
     "lucide-react": "^0.460.0",
+    "quill": "^2.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-quill": "^2.0.0",
     "react-katex": "^3.1.0",
     "react-router-dom": "^7.8.2",
     "react-toastify": "^11.0.5"
