--- a/server/vercel.json
+++ b/server/vercel.json
@@ -21,19 +21,23 @@
       "headers": [
         {
           "key": "Access-Control-Allow-Origin",
-          "value": "https://economista-portfolio-client.vercel.app"
+          "value": "*"
         },
         {
           "key": "Access-Control-Allow-Methods",
-          "value": "GET, POST, PUT, DELETE, OPTIONS"
+          "value": "GET, POST, PUT, DELETE, OPTIONS, PATCH"
         },
         {
           "key": "Access-Control-Allow-Headers",
-          "value": "Content-Type, Authorization, Cookie"
+          "value": "Content-Type, Authorization, Cookie, X-Requested-With, Accept, Origin"
         },
         {
           "key": "Access-Control-Allow-Credentials",
           "value": "true"
+        },
+        {
+          "key": "Access-Control-Expose-Headers",
+          "value": "Set-Cookie"
         }
       ]
     }
