create a better structure for the files

--- a/server/vercel.json
+++ b/server/vercel.json
@@ -21,7 +21,7 @@
       "headers": [
         {
           "key": "Access-Control-Allow-Origin",
-          "value": "https://economista-portfolio-client.vercel.app"
+          "value": "*"
         },
         {
           "key": "Access-Control-Allow-Methods",
